# cg_hw1

./: CMakeLists.txt  README.md
src/App/: CMakeLists.txt  TriangleWindow.cpp  TriangleWindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mandelbrotwidget.cpp  mandelbrotwidget.h  shaders.qrc
src/App/Shaders/: fractal.fs  fractal.vs
